bug-fix: vertically aligning journal items

--- a/src/components/Setting/styles/Setting.module.css
+++ b/src/components/Setting/styles/Setting.module.css
@@ -459,8 +459,9 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-bottom: 10px;
   border-radius: 5px;
   display: flex;
+  flex-direction: column-reverse;
   justify-content: space-between;
-  align-items: center;
+  align-items: left;
   word-break: break-word;
 }
 
